# asml.link

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  PHASE_11_QUICK_REFERENCE.txt  PHASE_11_SECURITY_ANALYSIS.md  README.md  docker-compose.yaml  plan.md  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/prompts/: plan-ciWorkflows.prompt.md
.github/workflows/: docker-publish.yml  pr-checks.yml
app/: __init__.py  config.py  db.py  dependencies.py  exceptions.py
app/middleware/: __init__.py  csrf.py  error_handler.py  request_logging.py  security_headers.py
app/models/: __init__.py  allow_list_entry.py  link.py  oauth_account.py  rate_limit_entry.py  user.py
app/routes/: __init__.py  allowlist.py  dashboard.py  links.py  redirect.py  users.py  web.py
app/schemas/: dashboard.py  link.py  user.py
app/services/: __init__.py  auth_service.py  link_service.py  rate_limiter.py  stats_service.py  user_service.py
app/templates/: base.html  dashboard.html  login.html
migrations/: env.py
scripts/: dev.sh  format.sh  lint.sh  test.sh
tests/: conftest.py  test_access_control.py  test_allowlist.py  test_analytics.py  test_auth_service.py  test_dashboard.py  test_integration_workflows.py  test_link_endpoints.py  test_link_service.py  test_link_service_impl.py  test_oauth.py  test_redirect.py  test_security.py  test_slug_generator.py  test_token_manager.py  test_user_management.py  test_user_service.py  test_validators.py  test_web_routes.py
(+14 files in other folders)
